🍣🎺 Checkpoint ./config.json:43843471/337 ./index.js:43843471/7106 ./config-client.json:43843471/749 ./komutlar/istatistik.js:43843471/3521 ./events/ready.js:43843471/57 ./komutlar/sa-as.js:43843471/2001 ./package.json:43843471/826 ./events/message.js:43843471/15

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "discord.js": "^13.6.0",
     "fs": "^0.0.2",
     "express": "^4.17.3",
-    "pretty-ms": "^7.0.1"
+    "pretty-ms": "^7.0.1",
+    "quick.db": "^7.1.3"
   },
   "engines": {
     "node": "16.x"
