--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "fs": "^0.0.2",
     "express": "^4.17.3",
     "pretty-ms": "^7.0.1",
-    "quick.db": "^7.1.3"
+    "quick.db": "^7.1.3",
+    "nrc.db": "^4.0.11"
   },
   "engines": {
     "node": "16.x"
