--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "^4.17.3",
     "pretty-ms": "^7.0.1",
     "quick.db": "^7.1.3",
-    "nrc.db": "^4.0.11"
+    "nrc.db": "^4.0.11",
+    "orio.db": "^3.1.0"
   },
   "engines": {
     "node": "16.x"
