--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "pretty-ms": "^7.0.1",
     "quick.db": "^7.1.3",
     "nrc.db": "^4.0.11",
-    "orio.db": "^3.1.0"
+    "orio.db": "^3.1.0",
+    "node-os-utils": "^1.3.6"
   },
   "engines": {
     "node": "16.x"
