--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "quick.db": "^7.1.3",
     "nrc.db": "^4.0.11",
     "orio.db": "^3.1.0",
-    "node-os-utils": "^1.3.6"
+    "node-os-utils": "^1.3.6",
+    "moment": "^2.29.2",
+    "moment-duration-format": "^2.3.2"
   },
   "engines": {
     "node": "16.x"
