--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "orio.db": "^3.1.0",
     "node-os-utils": "^1.3.6",
     "moment": "^2.29.2",
-    "moment-duration-format": "^2.3.2"
+    "moment-duration-format": "^2.3.2",
+    "native-request": "^1.1.0",
+    "node-superfetch": "^0.2.3",
+    "parse-ms": "^3.0.0"
   },
   "engines": {
     "node": "16.x"
