🌃🚕 Checkpoint ./komutlar/timeout.js:43843471/6779 ./schemas/komutlar.js:43843471/242 ./package.json:43843471/1353

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "moment-duration-format": "^2.3.2",
     "native-request": "^1.1.0",
     "node-superfetch": "^0.2.3",
-    "parse-ms": "^3.0.0"
+    "parse-ms": "^3.0.0",
+    "mongoose": "^6.2.11"
   },
   "engines": {
     "node": "16.x"
