--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "nrc.db": "^4.0.11",
     "orio.db": "^3.1.0",
     "node-os-utils": "^1.3.6",
-    "moment": "^2.29.2",
+    "moment": "^2.29.3",
     "moment-duration-format": "^2.3.2",
     "native-request": "^1.1.0",
     "node-superfetch": "^0.2.3",
     "parse-ms": "^3.0.0",
-    "mongoose": "^6.2.11"
+    "mongoose": "^6.3.0",
+    "@discordjs/builders": "^0.13.0",
+    "ms": "^2.1.3"
   },
   "engines": {
     "node": "16.x"
