--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "parse-ms": "^3.0.0",
     "mongoose": "^6.3.0",
     "@discordjs/builders": "^0.13.0",
-    "ms": "^2.1.3"
+    "ms": "^2.1.3",
+    "croxydb": "^0.0.7"
   },
   "engines": {
     "node": "16.x"
