😹💸 Checkpoint ./index.js:43843471/6810 ./package.json:43843471/1572 ./komutlar/reklam-engel.js:43843471/5347 ./komutlar/sa-as.js:43843471/806 ./komutlar/otorol.js:43843471/1338 ./komutlar/yardım.js:43843471/619

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "mongoose": "^6.3.0",
     "@discordjs/builders": "^0.13.0",
     "ms": "^2.1.3",
-    "croxydb": "^0.0.7"
+    "croxydb": "^0.0.7",
+    "message-js": "^0.0.5"
   },
   "engines": {
     "node": "16.x"
