--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "bos-altyapi-v13",
   "version": "3.0.0",
-  "description": "Umut Bayraktar Discord.js v13 Uyumlu Komutsuz Bot Altyapısı!",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
-  "author": "Umut Bayraktar",
+  "author": "Visionary",
   "dependencies": {
     "discord.js": "^13.6.0",
     "fs": "^0.0.2",
@@ -25,7 +25,8 @@
     "@discordjs/builders": "^0.13.0",
     "ms": "^2.1.3",
     "croxydb": "^0.0.7",
-    "message-js": "^0.0.5"
+    "message-js": "^0.0.5",
+    "quickredis-db": "^1.0.7"
   },
   "engines": {
     "node": "16.x"
