--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "ms": "^2.1.3",
     "croxydb": "^0.0.7",
     "message-js": "^0.0.5",
-    "quickredis-db": "^1.0.7"
+    "quickredis-db": "^1.0.7",
+    "guild.js": "^1.0.2"
   },
   "engines": {
     "node": "16.x"
