📚🎙 Checkpoint ./index.js:43843471/344 ./komutlar/afk.js:43843471/3 ./komutlar/gold-durum.js:43843471/780 ./komutlar/gold-ekle.js:43843471/1467 ./komutlar/gold-kaldır.js:43843471/1441 ./komutlar/gold.js:43843471/1086 ./komutlar/seviye-kanal.js:43843471/1339 ./komutlar/seviye-sistem.js:43843471/1629 ./komutlar/seviye.js:43843471/12520 ./komutlar/sa-as.js:43843471/3 ./package.json:43843471/3282 ./ayarlar.json:43843471/143

--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "croxydb": "^0.0.7",
     "message-js": "^0.0.5",
     "quickredis-db": "^1.0.7",
-    "guild.js": "^1.0.2"
+    "guild.js": "^1.0.2",
+    "common-tags": "^1.8.2",
+    "snekfetch": "^4.0.4"
   },
   "engines": {
     "node": "16.x"
