--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "guild.js": "^1.0.2",
     "common-tags": "^1.8.2",
     "snekfetch": "^4.0.4",
-    "kubitdb": "^1.4.7"
+    "kubitdb": "^1.4.7",
+    "canvacord": "^5.2.3"
   },
   "engines": {
     "node": "16.x"
